--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ variable = 1;
 document.getElementById('Top').src='Coworkers_rejiggedMark2_BlankVersion_TopHalf.jpg';
 }
 
-if (document.body.scrollTop < 100) {
+if (document.body.scrollTop < 100 && variable == 1) {
 
 document.getElementById('Bottom').src='Coworkers_rejiggedMark2_BlankVersion_BottomHalf.jpg';
 } 
