--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ window.onscroll = function() {myFunction()};
 function myFunction() 
 {
 
-if (documentElement.scrollTop > 885) {
+if (window.scrollY; > 885) {
 variable = 1;
 document.getElementById('Top').src='Coworkers_rejiggedMark2_BlankVersion_TopHalf.jpg';
 }
 
-if (documentElement.scrollTop < 100 && variable == 1) {
+if (window.scrollY < 100 && variable == 1) {
 
 document.getElementById('Bottom').src='Coworkers_rejiggedMark2_BlankVersion_BottomHalf.jpg';
 } 
