--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ window.onscroll = function() {myFunction()};
 function myFunction() 
 {
 
-if (window.scrollY; > 885) {
+if (window.scrollY > 885) {
 variable = 1;
 document.getElementById('Top').src='Coworkers_rejiggedMark2_BlankVersion_TopHalf.jpg';
 }
